--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ reqwest = "0.12.22"
 serenity = {version = "0.12.4", features = ["client", "standard_framework", "voice"]}
 songbird = { version = "0.5.0", default-features = true }
 tokio = {version = "1.46.1", features = ["macros", "rt-multi-thread"] }
-yt-dlp = { git = "https://github.com/sshcrack/yt-dlp.git", version = "1.3.4" }
+yt-dlp = { git = "https://github.com/sshcrack/yt-dlp.git", version = "1.3.4" } # until this is pushed use the bramch
 
 
 [dependencies.symphonia]
